--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} <!-- Расширение базвого файла -->
+{% load thumbnail %}
       {% block content %} 
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       {% block title %}
@@ -15,6 +16,9 @@
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
             </li>
           </ul>
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+            {% endthumbnail %}
           <p>{{ post.text }}</p>    
           {% if post.group %}   
           <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
